--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
   db:
     image: postgres
     restart: always
+    volumes:
+      - ~/postgres-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     environment:
